--- a/css/scss.scss
+++ b/css/scss.scss
@@ -16,7 +16,7 @@ li,
 p,
 td,
 th {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-weight: 400;
 }
 
@@ -25,7 +25,7 @@ h2,
 h4,
 h5,
 h6 {
-    font-family: 'Raleway';
+    font-family: 'Noto Sans';
 }
 
 h2 {
@@ -33,7 +33,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-weight: 700;
 }
 /* ID's*/
@@ -76,8 +76,8 @@ h3 {
     .header-author__subtitle {
         color         : $color-white;
         padding       : 0;
-        letter-spacing: 4px;
-        word-spacing  : 4px;
+        letter-spacing: 2px;
+        word-spacing  : 3px;
         font-weight   : 400;
         font-size     : 2.25vw;
         margin-top    : 1vw;
@@ -129,17 +129,22 @@ h3 {
         padding-top: 1.50em;
     }
 
+    h3 {
+        padding-top: 1em;
+    }
+
     .skills-list {
         list-style: none;
         padding   : 0;
 
         li {
             display: inline-block;
+            padding: 0 2px;
         }
     }
 
     .skills-list__img {
-        height: 6vh;
+        height: 6.5vh;
         margin: 5px;
     }
 
@@ -160,15 +165,15 @@ h3 {
         margin-left : auto;
         margin-right: auto;
         width       : 90vw;
+
+        h2 {
+            margin        : 0;
+            padding-top   : 2.7em;
+            padding-bottom: 1.5em;
+        }
     }
 
-    h2 {
-        margin        : 0;
-        padding-top   : 2.7em;
-        padding-bottom: 0.5em;
-    }
-
-    .works-container__gallery {
+    .works-container_gallery {
         position  : relative;
         display   : inline-block;
         overflow  : hidden;
@@ -192,8 +197,9 @@ h3 {
     text-align      : center;
 
     h2 {
-        margin-top : 0;
-        padding-top: 0.8em;
+        margin        : 0;
+        padding-top   : 1em;
+        padding-bottom: 0.6em;
     }
 
     .contact-data {
@@ -203,7 +209,7 @@ h3 {
     ul {
         list-style: none;
         margin    : 0;
-        padding   : 0;
+        padding   : 0.5em 0 0;
 
         li {
             display      : inline-block;
@@ -230,25 +236,46 @@ h3 {
         margin-bottom: 0;
     }
 
-    .contact-list__rights {
-        padding-bottom: 30px;
-    }
-
-    .contact-list__update {
-        padding-bottom: 5px;
+    .contact-list__footer {
+        padding-top   : 1.7em;
+        padding-bottom: 1.5em;
     }
 }
 /* MEDIA QUERY NORMAL SCREEN */
 @media (min-width: 64em) {
     h3 {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 700;
-        font-size  : 1.3vw;
+        font-size: 1.2vw;
+    }
+
+    p {
+        font-size: 1vw;
     }
 
     .header {
         .header-author {
             width: 45vw;
+        }
+
+        .header-author__title {
+            border-top   : 3px;
+            border-bottom: 3px;
+            border-style : solid none solid none;
+            color        : $color-white;
+            padding      : 2px 0 20px;
+            font-size    : 5.9vw;
+            margin       : 0;
+            text-align   : center;
+        }
+
+        .header-author__subtitle {
+            color         : $color-white;
+            padding       : 0;
+            letter-spacing: 4px;
+            word-spacing  : 5px;
+            font-weight   : 400;
+            font-size     : 2.25vw;
+            margin-top    : 1vw;
+            margin-bottom : 0;
         }
     }
 
@@ -269,13 +296,8 @@ h3 {
         }
 
         h3 {
-            font-size  : 1.3vw;
             padding-top: 6vw;
             margin-top : 0;
-        }
-
-        p {
-            font-size: 1vw;
         }
 
         .btn-mail {
@@ -284,6 +306,10 @@ h3 {
             margin-top: 1vw;
             width     : 7vw;
             height    : 2.4vw;
+
+            a {
+                display: block;
+            }
         }
 
         .btn-mail:hover {
@@ -295,7 +321,18 @@ h3 {
         height        : 35vw;
         padding-top   : 60px;
         padding-bottom: 60px;
-        /* tooltips SETTTINGS */
+
+        .skills-list {
+            li {
+                display: inline-block;
+                padding: 0 8px;
+            }
+        }
+
+        .skills-list__tooltips-text {
+            display: inline;
+        }
+
         a {
             &.skills-list__tooltips {
                 position: relative;
@@ -307,11 +344,12 @@ h3 {
                 width        : 110px;
                 color        : #FFFFFF;
                 background   : rgba(0, 0, 0, 1);
-                height       : 24px;
-                line-height  : 24px;
+                height       : 22px;
+                line-height  : 22px;
                 text-align   : center;
                 visibility   : hidden;
                 border-radius: 3px;
+                font-size    : 0.9rem;
             }
 
             &.skills-list__tooltips span:after {
@@ -330,7 +368,7 @@ h3 {
             &:hover.skills-list__tooltips span {
                 visibility : visible;
                 opacity    : 0.7;
-                top        : 35px;
+                top        : 22px;
                 left       : 50%;
                 margin-left: -55px;
                 z-index    : 999;
@@ -343,90 +381,92 @@ h3 {
         padding-top   : 60px;
         padding-bottom: 60px;
 
-        .works-container__gallery {
-            position  : relative;
-            display   : inline-block;
-            overflow  : hidden;
-            border    : 1em solid #fff;
-            background: #111;
-            max-width : 100%;
-            margin    : 10px;
-            width     : 18vw;
-            height    : 10vw;
+        .works-container {
+            .works-container_gallery {
+                position  : relative;
+                display   : inline-block;
+                overflow  : hidden;
+                border    : 1em solid #fff;
+                background: #111;
+                max-width : 100%;
+                margin    : 10px;
+                width     : 18vw;
+                height    : 10vw;
 
-            img {
-                display           : block;
-                -webkit-transition: all 0.6s ease-in-out;
-                transition        : all 0.6s ease-in-out;
-                width             : 20vw;
+                img {
+                    display           : block;
+                    -webkit-transition: all 0.6s ease-in-out;
+                    transition        : all 0.6s ease-in-out;
+                    width             : 20vw;
+                }
+
+                &:after {
+                    content           : '';
+                    height            : 100%;
+                    position          : absolute;
+                    text-align        : center;
+                    -webkit-transition: all 0.6s ease-in-out;
+                    transition        : all 0.6s ease-in-out;
+                    width             : 100%;
+                }
+
+                &:before {
+                    content           : '';
+                    height            : 100%;
+                    position          : absolute;
+                    text-align        : center;
+                    -webkit-transition: all 0.6s ease-in-out;
+                    transition        : all 0.6s ease-in-out;
+                    width             : 100%;
+                }
             }
 
-            &:after {
-                content           : '';
-                height            : 100%;
-                position          : absolute;
-                text-align        : center;
-                -webkit-transition: all 0.6s ease-in-out;
-                transition        : all 0.6s ease-in-out;
-                width             : 100%;
+            .works-container_gallery.rotate {
+                &:before {
+                    background              : rgba(100, 203, 192, .5);
+                    top                     : 0;
+                    left                    : 0;
+                    -webkit-transform-origin: 0 0;
+                    transform-origin        : 0 0;
+                    -webkit-transform       : rotateZ(-90deg);
+                    transform               : rotateZ(-90deg);
+                }
+
+                &:after {
+                    content                 : "\f09b";
+                    color                   : #fff;
+                    font-family             : FontAwesome;
+                    font-size               : 2em;
+                    background              : rgba(100, 203, 192, .9);
+                    top                     : 50%;
+                    left                    : 50%;
+                    width                   : 2em;
+                    height                  : 2em;
+                    margin                  : -1em 0 0 -1em;
+                    line-height             : 2em;
+                    -webkit-transform-origin: -4em -4em;
+                    transform-origin        : -4em -4em;
+                    -webkit-transform       : rotateZ(-90deg);
+                    transform               : rotateZ(-90deg);
+                }
             }
 
-            &:before {
-                content           : '';
-                height            : 100%;
-                position          : absolute;
-                text-align        : center;
-                -webkit-transition: all 0.6s ease-in-out;
-                transition        : all 0.6s ease-in-out;
-                width             : 100%;
-            }
-        }
-
-        .works-container__gallery.rotate {
-            &:before {
-                background              : rgba(100, 203, 192, .5);
-                top                     : 0;
-                left                    : 0;
-                -webkit-transform-origin: 0 0;
-                transform-origin        : 0 0;
-                -webkit-transform       : rotateZ(-90deg);
-                transform               : rotateZ(-90deg);
+            .works-container_gallery.rotate.left:after,
+            .works-container_gallery.rotate.left:before {
+                -webkit-transform: rotateZ(90deg);
+                transform        : rotateZ(90deg);
             }
 
-            &:after {
-                content                 : "\f09b";
-                color                   : #fff;
-                font-family             : FontAwesome;
-                font-size               : 2em;
-                background              : rgba(100, 203, 192, .9);
-                top                     : 50%;
-                left                    : 50%;
-                width                   : 2em;
-                height                  : 2em;
-                margin                  : -1em 0 0 -1em;
-                line-height             : 2em;
-                -webkit-transform-origin: -4em -4em;
-                transform-origin        : -4em -4em;
-                -webkit-transform       : rotateZ(-90deg);
-                transform               : rotateZ(-90deg);
+            .works-container_gallery.rotate:hover:after,
+            .works-container_gallery.rotate:hover:before {
+                -webkit-transform: rotateZ(0);
+                transform        : rotateZ(0);
             }
-        }
-
-        .works-container__gallery.rotate.left:after,
-        .works-container__gallery.rotate.left:before {
-            -webkit-transform: rotateZ(90deg);
-            transform        : rotateZ(90deg);
-        }
-
-        .works-container__gallery.rotate:hover:after,
-        .works-container__gallery.rotate:hover:before {
-            -webkit-transform: rotateZ(0);
-            transform        : rotateZ(0);
         }
     }
 
     .contact {
-        height     : 35vw;
+        height     : 25vw;
         padding-top: 60px;
 
         .fa {
@@ -444,12 +484,9 @@ h3 {
             }
         }
 
-        .contact-list__rights {
-            padding-top: 100px;
-        }
-
-        .contact-list__update {
-            padding-bottom: 10px;
+        .contact-list__footer {
+            padding-top   : 2em;
+            padding-bottom: 2em;
         }
     }
 }
