optimized for page speed

--- a/css/css.css
+++ b/css/css.css
@@ -34,7 +34,7 @@ h3 {
 
 /* CLASSES*/
 .header {
-  background-image: url("../img/background.png");
+  background-image: url("../img/background-min.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
