--- a/css/scss.scss
+++ b/css/scss.scss
@@ -1,7 +1,7 @@
 $color-white: #FFFFFF;
 $color-contact: #222222;
 $color-pink: #FF2B4A;
-$backgroundimg: "../img/background.png";
+$backgroundimg: "../img/background-min.png";
 $scaleimg: scale(1.2);
 /* FUNDAMENTAL*/
 * {
