added new effect to footer icons

--- a/css/scss.scss
+++ b/css/scss.scss
@@ -3,6 +3,7 @@ $color-contact: #222222;
 $color-pink: #FF2B4A;
 $backgroundimg: "../img/background-min.png";
 $scaleimg: scale(1.2);
+$rotateimg: rotate(20deg);
 /* FUNDAMENTAL*/
 * {
     scroll-behavior: smooth;
@@ -487,9 +488,9 @@ h3 {
 
             &:hover {
                 color            : $color-pink;
-                -webkit-transform: $scaleimg;
-                -webkit-transform: $scaleimg;
-                transform        : $scaleimg;
+                -webkit-transform: $scaleimg $rotateimg;
+                -webkit-transform: $scaleimg $rotateimg;
+                transform        : $scaleimg $rotateimg;
             }
         }
 
