--- a/css/style-desk.scss
+++ b/css/style-desk.scss
@@ -4,252 +4,17 @@ $color-pink: #FF2B4A;
 $backgroundimg: "../img/background-min.png";
 $scaleimg: scale(1.2);
 $rotateimg: rotate(20deg);
-/* FUNDAMENTAL*/
-* {
-    scroll-behavior: smooth;
-}
-
-body,
-dd,
-dt,
-html,
-li,
-p,
-td,
-th {
-    font-family: 'Noto Sans', sans-serif;
-    font-weight: 400;
-}
-
-h1,
-h2,
-h4,
-h5,
-h6 {
-    font-family: 'Noto Sans';
-}
-
-h2 {
-    font-weight: 900;
-}
-
-h3 {
-    font-family: 'Noto Sans', sans-serif;
-    font-weight: 700;
-}
-/* ID's*/
-#particles-js {
-    position: relative;
-    width   : 100%;
-}
-/* CLASSES*/
-.header {
-    background-image   : url($backgroundimg);
-    background-position: center;
-    background-size    : cover;
-    background-repeat  : no-repeat;
-    text-align         : center;
-    position           : relative;
-
-    .header-author {
-        position: absolute;
-        top     : 0;
-        bottom  : 0;
-        left    : 0;
-        right   : 0;
-        margin  : auto;
-        padding : 5px;
-        width   : 50vw;
-        height  : 18vw;
-    }
-
-    .header-author__title {
-        border-top   : 3px;
-        border-bottom: 3px;
-        border-style : solid none solid none;
-        color        : $color-white;
-        padding      : 5px 0 8px;
-        font-size    : 6.1vw;
-        margin       : 0;
-        text-align   : center;
-    }
-
-    .header-author__subtitle {
-        color         : $color-white;
-        padding       : 0;
-        letter-spacing: 2px;
-        word-spacing  : 3px;
-        font-weight   : 400;
-        font-size     : 2.25vw;
-        margin-top    : 1vw;
-        margin-bottom : 0;
-    }
-}
-
-.about {
-    padding: 20px 20px 60px;
-
-    h3 {
-        padding-top: 1.75em;
-    }
-
-    p {
-        text-align: justify;
-    }
-
-    img {
-        display: none;
-    }
-
-    .btn-mail {
-        float           : right;
-        background-color: $color-pink;
-        border          : 0;
-        color           : $color-white;
-        font-size       : 1rem;
-        width           : 100px;
-        height          : 30px;
-        margin-top      : 3px;
-        margin-right    : 20px;
-        padding         : 4px 8px;
-
-        a {
-            text-decoration: none;
-            display        : block;
-            color          : $color-white;
-        }
-    }
-}
-
-.skills {
-    padding         : 20px;
-    text-align      : center;
-    background-color: rgba(246, 246, 246, 1);
-
-    h2 {
-        padding-top: 1.50em;
-    }
-
-    h3 {
-        padding-top: 1em;
-    }
-
-    .skills-list {
-        list-style: none;
-        padding   : 0;
-
-        li {
-            display: inline-block;
-            padding: 0 2px;
-        }
-    }
-
-    .skills-list__img {
-        height: 6.5vh;
-        margin: 5px;
-    }
-
-    .skills-list__tooltips-text {
-        display: none;
-    }
-}
-
-.works {
-    background-color: rgba(100, 203, 192, 1);
-    text-align      : center;
-    padding-bottom  : 20px;
-    margin-left     : auto;
-    margin-right    : auto;
-    width           : 100%;
-
-    .works-container {
-        margin-left : auto;
-        margin-right: auto;
-        width       : 90vw;
-
-        h2 {
-            margin        : 0;
-            padding-top   : 2.7em;
-            padding-bottom: 1.5em;
-        }
-    }
-
-    .works-container_gallery {
-        position  : relative;
-        display   : inline-block;
-        overflow  : hidden;
-        border    : 1vw solid #fff;
-        background: #111;
-        max-width : 100%;
-        margin    : 10px;
-        width     : 30vw;
-        height    : 15vw;
-
-        img {
-            display: block;
-            width  : 30vw;
-        }
-    }
-}
-
-.contact {
-    background-color: $color-contact;
-    color           : $color-white;
-    text-align      : center;
-
-    h2 {
-        margin        : 0;
-        padding-top   : 1em;
-        padding-bottom: 0.6em;
-    }
-
-    .contact-data {
-        padding-bottom: 15px;
-    }
-
-    ul {
-        list-style: none;
-        margin    : 0;
-        padding   : 0.5em 0 0;
-
-        li {
-            display      : inline-block;
-            margin       : 10px 5px 10px 0;
-            border-right : 1px solid $color-white;
-            padding-right: 10px;
-
-            &:first-child {
-                padding-left: 15px;
-            }
-
-            &:last-child {
-                border: none;
-            }
-        }
-    }
-
-    a {
-        color          : $color-white;
-        text-decoration: none;
-    }
-
-    p {
-        margin-bottom: 0;
-    }
-
-    .contact-list__footer {
-        padding-top   : 1.7em;
-        padding-bottom: 1.5em;
-    }
-}
-/* MEDIA QUERY NORMAL SCREEN */
 @media (min-width: 64em) {
+    .drawer-brand {
+        display: none !important;
+    }
+
     h3 {
-        font-size: 1.2vw;
+        font-size: 1rem;
     }
 
     p {
-        font-size: 1vw;
+        font-size: 0.9rem;
     }
 
     .header {
@@ -258,25 +23,15 @@ h3 {
         }
 
         .header-author__title {
-            border-top   : 3px;
-            border-bottom: 3px;
-            border-style : solid none solid none;
-            color        : $color-white;
-            padding      : 2px 0 20px;
-            font-size    : 5.9vw;
-            margin       : 0;
-            text-align   : center;
+            padding  : 2px 0 20px;
+            font-size: 5.9vw;
         }
 
         .header-author__subtitle {
-            color         : $color-white;
-            padding       : 0;
             letter-spacing: 4px;
             word-spacing  : 5px;
-            font-weight   : 400;
-            font-size     : 2.25vw;
+            font-size     : 2.5vw;
             margin-top    : 1vw;
-            margin-bottom : 0;
         }
     }
 
@@ -297,7 +52,7 @@ h3 {
         }
 
         h3 {
-            padding-top: 6vw;
+            padding-top: 2.2rem;
             margin-top : 0;
         }
 
@@ -307,10 +62,6 @@ h3 {
             margin-top: 1vw;
             width     : 7vw;
             height    : 2.4vw;
-
-            a {
-                display: block;
-            }
         }
 
         .btn-mail:hover {
@@ -329,7 +80,6 @@ h3 {
 
         .skills-list {
             li {
-                display: inline-block;
                 padding: 0 8px;
             }
         }
@@ -393,18 +143,12 @@ h3 {
             }
 
             .works-container_gallery {
-                position  : relative;
-                display   : inline-block;
-                overflow  : hidden;
-                border    : 1em solid #fff;
-                background: #111;
-                max-width : 100%;
-                margin    : 10px;
-                width     : 18vw;
-                height    : 10vw;
+                border: 1em solid #fff;
+                margin: 10px;
+                width : 18vw;
+                height: 10vw;
 
                 img {
-                    display           : block;
                     -webkit-transition: all 0.6s ease-in-out;
                     transition        : all 0.6s ease-in-out;
                     width             : 20vw;
@@ -476,7 +220,6 @@ h3 {
     }
 
     .contact {
-        height     : 25vw;
         padding-top: 60px;
 
         .fa {
@@ -495,8 +238,8 @@ h3 {
         }
 
         .contact-list__footer {
-            padding-top   : 2em;
-            padding-bottom: 2em;
+            padding-top   : 2rem;
+            padding-bottom: 2rem;
         }
     }
 }
